<resources>
    <string name="app_name">ma</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_Kan">Kannada</string>
    <string name="radio_Eng">English</string>
    <string name="radio_Hin">Hindi</string>
</resources>
