<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <RelativeLayout android:id="@+id/r1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/title"
            android:text="Enrollment form"
            android:gravity="center"
            android:textSize="20dp"
            android:background="@drawable/b1"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/ID"
            android:text="ID"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/title"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/dID"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/ID"
            android:layout_toEndOf="@+id/ID"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>



        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Name"
            android:text="Name"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/ID"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/dName"
            android:layout_below="@+id/dID"
            android:layout_toRightOf="@+id/Name"
            android:layout_toEndOf="@+id/Name"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/FName"
            android:text="Father's Name"
            android:gravity="center"
            android:layout_below="@+id/Name"
            android:layout_alignParentLeft="true"
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/dFName"
            android:layout_below="@+id/dName"
            android:layout_toRightOf="@+id/FName"
            android:layout_toEndOf="@+id/FName"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/MName"
            android:text="Mother's Name"
            android:gravity="center"
            android:layout_below="@+id/dFName"
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/dMName"
            android:layout_below="@+id/dFName"
            android:layout_toRightOf="@+id/MName"
            android:layout_toEndOf="@+id/MName"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Age"
            android:text="Age"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/MName"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dAge"
            android:inputType="number"
            android:layout_below="@+id/dMName"
            android:layout_toRightOf="@+id/Age"
            android:layout_toEndOf="@+id/Age"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Gender"
            android:text="Gender"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/Age"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/dAge"
            android:layout_marginTop="5dp"
            android:id="@+id/radioGender"
            android:layout_toEndOf="@+id/Gender"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/Gender">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_female" />

        </RadioGroup>


        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/DOB"
            android:text="DOB"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/Gender"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/dDOB"
            android:layout_below="@+id/Gender"
            android:layout_toRightOf="@+id/DOB"
            android:layout_toEndOf="@+id/Age"
            android:layout_marginTop="5dp"
            android:text=""
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Location"
            android:text="Location"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/DOB"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/dLocation"
            android:layout_below="@+id/dDOB"
            android:layout_toRightOf="@+id/Location"
            android:layout_toEndOf="@+id/Location"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>


        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/Language"
            android:text="Language"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/Location"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/dLocation"
            android:layout_marginTop="5dp"
            android:id="@+id/radioLanguage"
            android:layout_toEndOf="@+id/Language"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/Language">

            <RadioButton
                android:id="@+id/radioKan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Eng"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_Hin" />

            <RadioButton
                android:id="@+id/radioHin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_Kan" />

        </RadioGroup>



        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/Address"
            android:text="Address"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/Language"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/dAddress"
            android:inputType="textPostalAddress"
            android:layout_below="@+id/radioLanguage"
            android:layout_toRightOf="@+id/Address"
            android:layout_toEndOf="@+id/Address"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Occ"
            android:text="Occupation"
            android:gravity="center"
            android:layout_below="@+id/Address"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dOcc"
            android:layout_below="@+id/dAddress"
            android:layout_toRightOf="@+id/Occ"
            android:layout_toEndOf="@+id/Occ"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Pno"
            android:text="Contact"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/Occ"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dPno"
            android:layout_below="@+id/dOcc"
            android:layout_toRightOf="@+id/Pno"
            android:layout_toEndOf="@+id/Pno"
            android:inputType="phone"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Nplc"
            android:text="Native Place"
            android:gravity="center"
            android:layout_below="@+id/Pno"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dNplc"
            android:layout_below="@+id/dPno"
            android:layout_toRightOf="@+id/Nplc"
            android:layout_toEndOf="@+id/Nplc"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Pinc"
            android:text="Parent's income"
            android:gravity="center"
            android:layout_below="@+id/Nplc"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dPinc"
            android:text="Rs."
            android:inputType="number"
            android:layout_below="@+id/dNplc"
            android:layout_toRightOf="@+id/Pinc"
            android:layout_toEndOf="@+id/Pinc"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/Altcno"
            android:text="Alternate contact"
            android:gravity="center"
            android:layout_below="@+id/Pinc"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dAltcno"
            android:layout_below="@+id/dPinc"
            android:layout_toRightOf="@+id/Altcno"
            android:layout_toEndOf="@+id/Altcno"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:background="@drawable/b2"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/IDprf"
            android:text="ID Proof"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_below="@+id/Altcno"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/b1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dIDprf"
            android:layout_below="@+id/dAltcno"
            android:layout_toRightOf="@+id/IDprf"
            android:layout_toEndOf="@+id/IDprf"
            android:layout_marginTop="5dp"
            android:background="@drawable/b2"/>

        <ImageView
            android:id="@+id/Image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/IDprf"
            />

        <Button
            android:id="@+id/SelectPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Photo"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/dIDprf"
            android:layout_toRightOf="@+id/Image"
            android:layout_marginLeft="20dp"/>

    </RelativeLayout>

</ScrollView>